<resources>
    <string name="app_name">Vocabulary Test Maker1</string>
    <string name="main_title">単語テストアプリ</string>
    <string name="i_spreadsheet">まとめて入力</string>
    <string name="i_manual">手入力</string>
    <string name="input">入力</string>
    <string name="test">テスト</string>
    <string name="note">単語帳</string>
    <string name="ten">10問</string>
    <string name="twenty">20問</string>
    <string name="thirty">30問</string>
    <string name="fifty">50問</string>
    <string name="hundred">100問</string>
    <string name="word">単語</string>
    <string name="wordCount">語</string>
    <string name="meaning">意味</string>
    <string name="save">保存</string>
    <string name="complete">完了</string>
    <string name="check">確認</string>
    <string name="null_wm_err">単語と意味を入力してください！</string>
    <string name="null_word_err">単語を入力してください！</string>
    <string name="null_meaning_err">意味を入力してください！</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="save_complete">保存しました！</string>
    <string name="delete">削除</string>
    <string name="delete_complete">削除しました！</string>
    <string name="edit">編集</string>
    <string name="edit_complete">を編集しました！</string>
    <string name="all">全て</string>
    <string name="detail">詳細</string>
    <string name="result">結果</string>
    <string name="finish">終わる</string>
    <string name="cancel">キャンセル</string>
    <string name="title_activity_result_list">ResultListActivity</string>
    <string name="subject_name">教科名</string>
    <string name="coverage_name">範囲名</string>
    <string name="ok">OK!</string>
    <string name="step1">Step1. 科目名を入力してください</string>
    <string name="step2">Step2. 範囲名を入力してください!</string>
    <string name="title_activity_coverage_list">CoverageListActivity</string>
    <string name="scarceWordsError">テストする単語数が足りません！まず単語を入力してください！</string>
    <string name="spreadSheetId">単語の中身を入力してください</string>
</resources>
