<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <Button
        android:id="@+id/i_s_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_spreadsheet"
        app:layout_constraintBottom_toTopOf="@id/i_manual"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/i_manual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="384dp"
        android:text="@string/i_manual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/i_s_sheet"
        app:layout_constraintRight_toRightOf="@id/i_s_sheet" />

    <EditText
        android:id="@+id/sheetIdEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/spreadSheetId"
        app:layout_constraintLeft_toLeftOf="@id/i_manual"
        app:layout_constraintRight_toRightOf="@id/i_manual"
        app:layout_constraintTop_toTopOf="@id/i_manual"
        />

</androidx.constraintlayout.widget.ConstraintLayout>