<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCategoryActivity">

    <EditText
        android:id="@+id/subjectEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:ems="10"
        android:hint="@string/subject_name"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/coverage_name"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@id/subjectEdit"
        app:layout_constraintRight_toRightOf="@id/subjectEdit"
        app:layout_constraintTop_toTopOf="@id/subjectEdit" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/ok"
        app:layout_constraintRight_toRightOf="@id/subjectEdit"
        app:layout_constraintLeft_toLeftOf="@id/subjectEdit"
        app:layout_constraintTop_toBottomOf="@id/subjectEdit"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/checkImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/okBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/okBtn"
        app:layout_constraintRight_toRightOf="@id/okBtn"
        app:layout_constraintTop_toTopOf="@id/okBtn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/check" />

    <TextView
        android:id="@+id/warningTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toTopOf="@+id/subjectEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

</androidx.constraintlayout.widget.ConstraintLayout>